# image_database_builder

./: .gitignore  Makefile  Pipfile  README.md  builder.py  collection.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
scripts/: random_image_getter.py
src/: builder.py  collection.py  config.py  database.py  image.py  imagedirectory.py  logger.py
src/data_model/: image.py  imagedirectory.py  mongo_support.py  subject.py
tests/: test_collection.py  test_database_builder.py  test_image.py  test_imagedirectory.py
