[tool.pytest.ini_options]
pythonpath = [
    "src"
]
addopts = "--random-order"
testpaths = "tests"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120

[tool.poetry]
name = "image-database-builder"
version = "0.1.0"
description = ""
authors = ["Eric Ziegler <eric.ziegler@protonmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
SQLAlchemy = "^2.0.8"
iptcinfo3 = "^2.1.4"
pillow = "^9.5.0"
tinydb = "^4.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
requests = "^2.28.2"
tqdm = "^4.65.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-parallel = "^0.1.1"
pytest-random-order = "^1.1.0"
coverage = "^7.2.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
